// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default reducer Get countries 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [
    Object {
      "country": "Afghanistan",
      "countryCode": "AFG",
    },
  ],
  "loadingCountriesError": false,
  "loadingSkillTagsError": true,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Default reducer Get countries error 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [
    Object {
      "country": "Afghanistan",
      "countryCode": "AFG",
    },
  ],
  "loadingCountriesError": true,
  "loadingSkillTagsError": true,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Default reducer Get skill tags 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [],
  "loadingSkillTagsError": false,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Default reducer Get skill tags error 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [],
  "loadingSkillTagsError": true,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Default reducer Initial state 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [],
  "reviewTypes": Array [],
  "skillTags": Array [],
}
`;

exports[`Factory without server side rendering Get countries 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [
    Object {
      "country": "Afghanistan",
      "countryCode": "AFG",
    },
  ],
  "loadingCountriesError": false,
  "loadingSkillTagsError": true,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Factory without server side rendering Get countries error 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [
    Object {
      "country": "Afghanistan",
      "countryCode": "AFG",
    },
  ],
  "loadingCountriesError": true,
  "loadingSkillTagsError": true,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Factory without server side rendering Get skill tags 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [],
  "loadingSkillTagsError": false,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Factory without server side rendering Get skill tags error 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [],
  "loadingSkillTagsError": true,
  "reviewTypes": Array [],
  "skillTags": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
}
`;

exports[`Factory without server side rendering Initial state 1`] = `
Object {
  "allCountries": Array [],
  "countries": Array [],
  "reviewTypes": Array [],
  "skillTags": Array [],
}
`;
